--- a/Def_OAuth.html
+++ b/Def_OAuth.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style_Header.css">
+    <link rel="stylesheet" href="./style/style_main.css">
     <title>Définition OAuth</title>
 </head>
 <body>
