--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style_Header.css">
     <link rel="stylesheet" href="./style/style_main.css">
-    <title>Acceuiil</title>
+    <title>Acceuil</title>
 </head>
 <body>
     <header>
 
-        <img src="./images/Logo_Header.png" alt="Logo"/>
+        <a href="index.html"><img src="./images/Logo_Header.png" alt="Logo"/></a>
 
         <nav>
             <ul>
@@ -31,8 +31,9 @@
         
     </header>
     <main>
+        <h1></h1>
         <p>
-            Le texte ne s'affiche pas correctement et se trouve en dessous du header.
+            
         </p>
     </main>
 
