--- a/Def_Http.html
+++ b/Def_Http.html
@@ -10,7 +10,7 @@
 <body>
     <header>
 
-        <img src="./images/Logo_Header.png" alt="Logo"/>
+        <a href="index.html"><img src="./images/Logo_Header.png" alt="Logo"/></a>
 
         <nav>
             <ul>
