--- a/Metier.html
+++ b/Metier.html
@@ -10,8 +10,7 @@
 <body>
     <header>
 
-        <img src="./images/Logo_Header.png" alt="Logo"/>
-
+        <a href="index.html"><img src="./images/Logo_Header.png" alt="Logo"/></a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
