Fin du Main HTML - Manque About

--- a/About.html
+++ b/About.html
@@ -20,11 +20,10 @@
                     <a>Mes définitions ▿</a>
                     <ul>
                         <li><a href="Def_OAuth.html">OAuth</a></li>
-                        <li><a href="Def_OAuth.html">Http</a></li>
+                        <li><a href="Def_Http.html">Http</a></li>
                     </ul>
                 </li>
                 <li><a href="About.html">About</a></li>
-                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
         
