--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         <h2 id="methode_piratage">Méthodes de « piratage »</h2>
         <div class="container">
             <img src="images/hacker-8018499_640.webp" alt="Affichage d'un virus sur un écran d'ordinateur" class="image_droite">
-            <p>Voici difféentes méthodes de piratage informatique principales :</p>
+            <p>Voici différentes méthodes de piratage informatique principales :</p>
                 <ol>
                     <li>Virus : Logiciel malveillant qui se propage en infectant d'autres fichiers ou systèmes, causant des dommages ou volant des données.</li>
                     <li>Phishing : Technique d'usurpation d'identité par laquelle un attaquant incite l'utilisateur à divulguer des informations sensibles (mots de passe, numéros de carte bancaire) via de faux e-mails ou sites web.</li>
