Problème mes définitions résolu

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Metier.html">Mon métier</a></li>
                 <li>
-                    <a class="definitions">Mes définitions ▿</a>
+                    <a>Mes définitions ▿</a>
                     <ul>
                         <li><a href="Def_OAuth.html">OAuth</a></li>
                         <li><a href="Def_Http.html">Http</a></li>
